fix(sonar): address initial reliability and maintainability findings